# cookidoo-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: discover_search_api.md
src/cookidoo_mcp/: __init__.py  __main__.py  client.py  server.py
