[project]
name = "cookidoo-mcp"
version = "0.1.0"
description = "MCP server for Cookidoo/Thermomix — find recipes, manage meal calendar and shopping list"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "certifi>=2026.2.25",
    "cookidoo-api==0.16.0",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
cookidoo-mcp = "cookidoo_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cookidoo_mcp"]

[tool.uv]
package = true
